[tool.poetry]
name = "oliveea"
version = "0.1.0"
description = "A tool to help you craft conversations that care"
authors = ["Justin Herrera <justin.kc.herrera@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

# Backend dependencies
fastapi = "^0.103.1"
uvicorn = "^0.21.0"
openai = "^0.27.2"
langchain = "^0.0.281"
pydantic-settings = "^2.0.3"
pre-commit = "^3.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
oliveea = "oliveea.main:app"